tests/baselines/reference/-57087-51.errors.txt
-57087-51.ts(10,4): error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GAND'.
  Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
    Types of parameters 'x' and 'x' are incompatible.
      Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.


==== -57087-51.ts (1 errors) ====
    declare function f1(x:{ a: string } | { b: number }):void;
    declare function f2(x:{ a?: string, b?: number }):void;
    declare function f3(x:{ a: string, b: number }):void;
    
    type GOR = ((x:{ a: string })=>void) | ((x:{ b: number }) => void);
    
    type GAND = ((x:{ a: string })=>void) & ((x:{ b: number }) => void);
    
    
    f3 satisfies GAND; // should be false
       ~~~~~~~~~
!!! error TS1360: Type '(x: { a: string; b: number; }) => void' does not satisfy the expected type 'GAND'.
!!! error TS1360:   Type '(x: { a: string; b: number; }) => void' is not assignable to type '(x: { a: string; }) => void'.
!!! error TS1360:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS1360:       Property 'b' is missing in type '{ a: string; }' but required in type '{ a: string; b: number; }'.
!!! related TS2728 -57087-51.ts:3:36: 'b' is declared here.
    
    